--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ deploy:
   provider: elasticbeanstalk
   region: "us-east-1"
   app: "docker-react"
-  env: "Docker-react-env"
+  env: "Docker-react-env-1"
   bucket_name: "elasticbeanstalk-us-east-1-757952589904"
   bucket_path: "docker-react"
   on:
